--- a/report.org
+++ b/report.org
@@ -10,8 +10,17 @@
 * Setting up Dockerfile
   FROM ubuntu:16.04
   -> will download this image
+  Use RUN to set up box
+  CMD is the default command to run in the image. Only one is allowed in Dockerfile
 * Building an image
-  $ sudo docker build . (assuming there is a dockerfile in the current directory)
+  $ sudo docker build -t <tag> . (assuming there is a dockerfile in the current directory)
+* Seeing existing images
+  $ sudo docker images
+* Seeing existing containers
+  $ sudo docker ps -a
+* Removing images and containers
+  $ docker rmi <image>
+  $ docker rm <container>
 * Running compilation
 ** Mounting host director as data volume
    $ docker run -d -P --name web -v /src/webapp:/opt/webapp training/webapp python app.py
