--- a/report.org
+++ b/report.org
@@ -49,4 +49,7 @@
    $ sudo docker run --rm -v /home/preston/docker-experiment:/opt/src ugcc gcc test.c
    and a.out is in current directory!
 * To think about:
-  Having one container compile and another container run: http://blog.terranillius.com/post/docker_builder_pattern/
+  - Having one container compile and another container run: http://blog.terranillius.com/post/docker_builder_pattern/
+  - Have weird levels of makefiles.
+    make would only compile in container if host source file has changed since then.
+    but, it is working properly now with dockerCompile
