--- a/report.org
+++ b/report.org
@@ -14,6 +14,7 @@
   CMD is the default command to run in the image. Only one is allowed in Dockerfile
 * Building an image
   $ sudo docker build -t <tag> . (assuming there is a dockerfile in the current directory)
+  $ sudo docker build -t <tag> -f <file>
 * Seeing existing images
   $ sudo docker images
 * Seeing existing containers
