--- a/report.org
+++ b/report.org
@@ -40,9 +40,9 @@
    Might not need -P flag in all cases, though.
    Might work well with pyret and cpo!
 ** Progress
-   sudo docker run --name compilation -v /home/preston/docker-experiment:/opt/docker-experiment\
-   ubuntu-gcc gcc test.c
+   sudo docker run --name compilation -v /home/preston/docker-experiment:/opt/docker-experiment ubuntu-gcc gcc test.c
    -> can't find test.c
+   -> works if set working directory
 
    can add --rm flag to immediately destroy container
 ** Final command
