--- a/report.org
+++ b/report.org
@@ -39,7 +39,7 @@
      <image name> <thing to do>
    Might not need -P flag in all cases, though.
    Might work well with pyret and cpo!
-** Progress
+** Progress (does not work)
    sudo docker run --name compilation -v /home/preston/docker-experiment:/opt/docker-experiment\
    ubuntu-gcc gcc test.c
    -> can't find test.c
